--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div>
                 <img src="images/cover-page.jpg" alt="" width="100%" height="100%">
             </div>
+            <div>
+                <p></p>
+            </div>
             <div class="table-contents">
                 <h2>Table of Contents</h2>
                     <ul>
@@ -51,7 +54,7 @@
             </div>
             <div id="features">
                 <h1>Python Features</h1>
-                <h2>Page </h2>
+                <h2>Page 2</h2>
                 <p>Python's features include:
                      
                     <br>Easy-to-learn:
@@ -73,12 +76,12 @@
             </div>
             <div id="installation">
                 <h1>Installing Python</h1>
-                <h2>Page 4</h2>
+                <h2>Page 3</h2>
                 <p>Python distribution is available for a wide variety of platforms. You need to downloadonly the binary code applicable for your platform and install Python.If the binary code for your platform is not available, you need a C compiler to compilethe source code manually. Compiling the source code offers more flexibility in termsof choice of features that you require in your installation.</p>
             </div>
             <div>
-                <h1>Page 5</h1>
-                <h2>Setting Up PATH</h2>
+                <h1>Setting Up PATH</h1>
+                <h2>Page 4</h2>
                 <p>
  
                     Programs and other executable files can be in many directories, so operating systemsprovide a search path that lists the directories that the OS searches for executables.The path is stored in an environment variable, which is a named string maintainedby the operating system. This variable contains information available to the commandshell and other programs.The
@@ -89,7 +92,7 @@
             </div>
             <div id="overview">
                 <h1>Overview</h1>
-                <h2>Page 6</h2>
+                <h2>Page 5</h2>
                 <p>Python is a high-level, interpreted, interactive and object-oriented scriptinglanguage. Python is designed to be highly readable. It uses English keywordsfrequently where as other languages use punctuation, and it has fewer syntacticalconstructions than other languages
                     Python is Interpreted: 
                     Python is processed at runtime by the interpreter.You do not need to compile your program before executing it. This is similarto PERL and PHP.
@@ -97,6 +100,11 @@
                     You can actually sit at a Python prompt and interactwith the interpreter directly to write your programs.
                     Python is Object-Oriented:
                     Python supports Object-Oriented style ortechnique </p>
+            </div>
+            <div id="installation">
+                <h1>Installing Python</h1>
+                <h2>Page 6</h2>
+                <p>Python distribution is available for a wide variety of platforms. You need to downloadonly the binary code applicable for your platform and install Python.If the binary code for your platform is not available, you need a C compiler to compilethe source code manually. Compiling the source code offers more flexibility in termsof choice of features that you require in your installation.</p>
             </div>
             <div class="end-text">
                 <h1>The End</h1>
